Replace options with actual names

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <h5>Pick your favourite artist and you will see feedback message.</h5>
             <div class="optionSelect__dropwmenu">
                 <select>
-                    <option>Option1</option>
-                    <option>Option2</option>
-                    <option>Option3</option>
-                    <option>Option4</option>
-                    <option>Option5</option>
+                    <option>The Beatles</option>
+                    <option>Coldplay</option>
+                    <option>Christina Aguilera</option>
+                    <option>Shakira</option>
+                    <option>Michael Jackson</option>
                 </select>
             <div class="optionSelect__output"></div>
             </div>
